Display the weather country.

--- a/templates/index.html
+++ b/templates/index.html
@@ -9,7 +9,7 @@
 <hr>
 
 <h2>Current Weather</h2>
-<p>City: <strong>{{ weather.city }}</strong></p>
+<p>City: <strong>{{ weather.city }}, {{ weather.country }}</strong></p>
 <p><strong>{{ weather.temperature }}&#8457</strong> | <em>{{ weather.description }}</em> </p>
 
 <form action="/" method="get">
