--- a/headlines/templates/index.html
+++ b/headlines/templates/index.html
@@ -6,7 +6,7 @@
 
 <div class="container">
     <div class="jumbotron text-center">
-        <h1 class="display-3">HEADLINES</h1>
+        <h1>HEADLINES</h1>
         <p class="lead">Get your daily dose of news from around the world</p>
         <hr class="my-4">
         
