Make the jumbotron screen wide.

--- a/headlines/templates/index.html
+++ b/headlines/templates/index.html
@@ -4,8 +4,8 @@
 
 {% block body %}
 
-<div class="container">
-    <div class="jumbotron text-center">
+<div class="jumbotron text-center">
+    <div class="container-fluid">
         <h1>HEADLINES</h1>
         <p class="lead">Get your daily dose of news from around the world</p>
         <hr class="my-4">
