--- a/headlines/templates/layout.html
+++ b/headlines/templates/layout.html
@@ -7,6 +7,7 @@
     <title>{% block title %}{% endblock %}- Headlines</title>
 
     <link rel="stylesheet" href="https://bootswatch.com/4-alpha/yeti/bootstrap.min.css">
+    <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web|Lora">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
