Forex -> Exchange Rate

--- a/headlines/templates/includes/forex.html
+++ b/headlines/templates/includes/forex.html
@@ -1,5 +1,5 @@
 <div class="col-md-4">
-    <h2>Forex</h2>
+    <h2>Exchange Rate</h2>
     <p> <strong>1 {{ currency_from }}</strong> = <strong>{{ currency_to }} {{ rate }}</strong></p>
     <form action="/" method="get">
         <div class="input-group">
