--- a/headlines/templates/layout.html
+++ b/headlines/templates/layout.html
@@ -8,6 +8,7 @@
 
     <link rel="stylesheet" href="https://bootswatch.com/4-alpha/yeti/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web|Lora">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
