--- a/headlines/templates/includes/navbar.html
+++ b/headlines/templates/includes/navbar.html
@@ -1,7 +1,10 @@
 
 <nav class="navbar fixed-top navbar-toggleable-sm">
     <div class="container">
-        <a class="navbar-brand" href="#">Headlines</a>
+        <a class="navbar-brand" href="#">
+            <span class="fa fa-newspaper-o"></span>
+            Headlines
+        </a>
         <button class="navbar-toggler" type="button" data-toggle="collapse" data-target="#navbarResponsive" aria-controls="navbarResponsive" aria-expanded="false" aria-label="Toggle navigation">
             <span class="navbar-toggler-icon fa fa-bars fa-lg"></span>
         </button>
