--- a/headlines/static/css/main.css
+++ b/headlines/static/css/main.css
@@ -15,6 +15,7 @@ h1, h2, h3, h4, h5, h6 {
     margin-bottom: 100px;
     box-shadow: 10px 10px 5px 0px rgba(0,0,0,0.75);
     border-radius: 5%;
+    padding: 20px;
 }
 
 .article-image {
