--- a/headlines/templates/includes/navbar.html
+++ b/headlines/templates/includes/navbar.html
@@ -1,7 +1,7 @@
 
 <nav class="navbar fixed-top navbar-toggleable-sm">
     <div class="container">
-        <a class="navbar-brand" href="#">
+        <a class="navbar-brand" href="{{ url_for('index') }}">
             <span class="fa fa-newspaper-o"></span>
             Headlines
         </a>
