Replaced news source with "Front Page" in the title.

--- a/headlines/templates/index.html
+++ b/headlines/templates/index.html
@@ -1,6 +1,6 @@
 {% extends "layout.html" %}
 
-{% block title %} {{ source.upper() }} {% endblock %}
+{% block title %} Front Page {% endblock %}
 
 {% block body %}
 
