--- a/headlines/templates/includes/navbar.html
+++ b/headlines/templates/includes/navbar.html
@@ -11,9 +11,8 @@
 
         <div class="collapse navbar-collapse" id="navbarResponsive">
             <ul class="navbar-nav ml-auto">
-                <li><a class="nav-link" href="{{ url_for('index') }}">Home</a></li>
+                <li><a class="nav-link" href="{{ url_for('index') }}">Front Page</a></li>
                 <li><a class="nav-link" href="{{ url_for('code') }}">Code</a></li>
-                <li><a class="nav-link" href="{{ url_for('about') }}">About</a></li>
             </ul>
         </div>
     </div>
