--- a/headlines/static/css/main.css
+++ b/headlines/static/css/main.css
@@ -3,6 +3,7 @@ body {
     font-family: 'Istok Web', sans-serif;
     line-height: 1.6;
     padding-top: 50px;
+    font-size: 16px;
 }
 
 h1, h2, h3, h4, h5, h6 {
@@ -61,4 +62,11 @@ footer.navbar {
     font-size: 18px;
     color: white;
     font-family: 'Lora', serif;
+}
+
+hr {
+    width: 50%;
+    border-color: red;
+    margin-top: 75px;
+    margin-bottom: 75px;
 }
