--- a/headlines/templates/layout.html
+++ b/headlines/templates/layout.html
@@ -6,6 +6,8 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <title>{% block title %}{% endblock %}- Headlines</title>
 
+    <link rel="icon" type="image/png" href="{{ url_for('static', filename='favicon.png') }}">
+
     <link rel="stylesheet" href="https://bootswatch.com/4-alpha/yeti/bootstrap.min.css">
     <link rel="stylesheet" href="https://fonts.googleapis.com/css?family=Istok+Web|Lora">
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/font-awesome/4.7.0/css/font-awesome.min.css">
