--- a/headlines/templates/includes/email_form.html
+++ b/headlines/templates/includes/email_form.html
@@ -1,4 +1,4 @@
-<form action="/" method="post">
+<form action="{{ url_for('code') }}" method="post">
     {{ form.hidden_tag() }}
 
     <div class="form-group">
