Add styling to flashed mess

--- a/headlines/static/css/main.css
+++ b/headlines/static/css/main.css
@@ -74,3 +74,14 @@ hr {
 textarea {
     height: 200px;
 }
+
+.flashed-message {
+    position: absolute;
+    top: 100px;
+    left: -20px;
+    height: 50px;
+    z-index: 99;
+    width: 400px;
+    font-size: 20px;
+    padding-left: 30px;
+}
