--- a/headlines/templates/layout.html
+++ b/headlines/templates/layout.html
@@ -14,6 +14,19 @@
     <link rel="stylesheet" href="{{ url_for('static', filename='css/main.css') }}">
 </head>
 <body>
+    {% with messages = get_flashed_messages(with_categories=true) %}
+        {% if messages %}
+        {% for category, msg in messages %}
+        <div class="flashed-message alert alert-{{ category }} alert-dismissible fade show" role="alert">
+            <strong>{{ msg }}</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
+    {% endwith %}
+    
     {% include "includes/navbar.html" %}
     {% block body %}{% endblock %}
     {% include "includes/footer.html" %}
