col-md-4 -> col-lg-4

--- a/headlines/templates/code.html
+++ b/headlines/templates/code.html
@@ -12,22 +12,22 @@
 
 <div class="container-fluid">
     <div class="row text-center">
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <h2><span class="fa fa-code"></span> Source Code</h2>
             <p class="text-justify">The source code of this application is released under the <strong></strong> MIT License. Which means you are free to use, modify, and distribute the application to your hearts content. See the <a href="https://github.com/alchermd/headlines/blob/master/LICENSE" target="_blank">LICENSE</a> for more information.</a></p>
 
             <a href="https://github.com/alchermd/headlines/" class="btn btn-primary" target="_blank">Fork Me!</a>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <h2><span class="fa fa-cubes"></span> Technology</h2>
             <p class="text-justify">The core application is built with the Python microframework <a href="https://flask.pocoo.org/" target="_blank">Flask</a> and the front end with <a href="https://www.getbootstrap.com/" target="_blank">Bootstrap</a>. The data is pulled using the <code>requests</code> and <code>urllib</code> libraries. The news, weather, and forex data are fetched from the following APIs:</p>
-            <div class="btn-group">
+            <div class="btn-group-vertical">
                 <a href="https://newsapi.org/" class="btn btn-primary" target="_blank">NewsAPI</a></li>
                 <a href="https://openweathermap.org/api" class="btn btn-primary" target="_blank">OpenWeatherMap</a> 
                 <a href="https://openexchangerates.org/" class="btn btn-primary" target="_blank">OpenExchangeRates</a>
             </div>
         </div>
-        <div class="col-md-4">
+        <div class="col-lg-4">
             <h2><span class="fa fa-code-fork"></span> Contributing</h2>
             <p class="text-justify">Have an idea for improvement? I'm happy to hear your thoughts! Please file an issue or make a pull request in the application's Github repository.</p>
             <div class="btn-group">
