--- a/headlines/templates/includes/email_form.html
+++ b/headlines/templates/includes/email_form.html
@@ -8,10 +8,32 @@
     <div class="form-group">
         {{ form.reply_to.label(for='reply_to') }}
         {{ form.reply_to(class='form-control') }}
+
+        {% if form_errors %}
+        {% for error in form_errors.reply_to %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>{{ error }}</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
     </div>
     <div class="form-group">
         {{ form.message.label(for='message') }}
         {{ form.message(class='form-control') }}
+
+        {% if form_errors %}
+        {% for error in form_errors.message %}
+        <div class="alert alert-danger alert-dismissible fade show" role="alert">
+            <strong>{{ error }}</strong>
+            <button type="button" class="close" data-dismiss="alert" aria-label="Close">
+                <span aria-hidden="true">&times;</span>
+            </button>
+        </div>
+        {% endfor %}
+        {% endif %}
     </div>
     {{ form.submit(class='btn btn-primary') }}
 </form>
